--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pyasn1-modules==0.3.0
 pyparsing==3.1.1
 python-crontab==3.0.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
